--- a/src/App.css
+++ b/src/App.css
@@ -27,7 +27,7 @@ header {
   padding: 1rem;
   display: flex;
   justify-content: space-between;
-  align-items: flex-start;
+  align-items: center;
   background-color: #61dbfb;
   color: whitesmoke;
   position: sticky;
